@@ -1,3 +1,9 @@
+2001-02-28  Andreas Jaeger  <aj@suse.de>, Bo Thorsen  <bo@suse.de>
+
+	* config/tc-i386.c (tc_gen_reloc): Remove ugly hack which is not needed
+	anymore since we use bfd_elf_generic_reloc now.
+	(md_apply_fix3): Only apply hack for partial_inplace if not using RELA.
+
 2001-02-21  David Mosberger  <davidm@hpl.hp.com>
 
 	* config/tc-ia64.c (enum operand_match_result): New type.
@@ -7,7 +13,7 @@
 	(parse_operands): New locals result, error_pos, out_of_range_pos,
 	curr_out_of_range_pos.  Rewrite operand matching loop to give better
 	error messages.
-	
+
 2001-02-21  David Mosberger  <davidm@hpl.hp.com>
 
 	* config/tc-ia64.c (struct unwind): Add member "prologue_count".
@@ -35,7 +41,7 @@
 	From 2001-02-06  H.J. Lu  <hjl@gnu.org>
 	* config/tc-ia64.h (TC_RELOC_RTSYM_LOC_FIXUP): Do fixup if
 	there is no relocation.
-	
+
 	From 2001-02-06  H.J. Lu  <hjl@gnu.org>
 	* config/tc-ia64.h (TC_RELOC_RTSYM_LOC_FIXUP): New. Defined.
 	* config/tc-ia64.c (md_parse_option): Only accept the valid
